--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,16 @@ html,body{
     background-color: var(--clr-main);
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-around;
     height: 100%;
 }
 
 
 /*CONTENIDO*/
+
+/*PRINCIPAL*/
 main{
-    margin: 1rem;
+    margin: 1rem 0px 1rem 0px;
     padding: 2rem;
     width: 80%;
     border-radius: 20px;
@@ -29,20 +32,47 @@ main{
 }
 main h2{
     color: var(--clr-main);
-}
-
-.aside-visible{
-    margin: 1rem;
     padding: 1rem;
+}
+/*BARRA LATERAL*/
+.aside-visible{
+    padding: 3rem 1rem 1rem 1rem;
     width: 15%;
     display: flex;
     flex-flow: column wrap;
+    justify-content: space-between;
 }
-nav{
-    height: 90%;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-evenly;
+.aside-visible h1{
+    padding-top: 2rem;
+    font-size: 1.5rem;
+    color: var(--clr-white);
+    align-self: flex-start;
+    justify-self: center;
 }
+/*BOTONES*/
+nav ul li{
+    width: 100%;
+    border-radius: 10px;
+    margin: 3rem 0px 3rem 0px;
+    padding: 0.8rem;
+}
+nav ul li button, .boton-carrito{
+    color: var(--clr-white);
+    font-size: 1rem;
+    background:none;
+    border: none;
+}
+nav ul li button i, .boton-carrito i{
+    margin-right: 0.5rem;
+}
+nav ul li:hover{
+    background-color: var(--clr-white);
+}
+nav ul li:hover button, nav ul li:hover .boton-carrito{
+    color: var(--clr-main);
+}
+/*FOOTER*/
 footer{
+    width: 100%;
+    align-self: flex-end;
 }
