--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,7 +1,6 @@
 html,body{
     height: 100%;
 }
-
 /*FORMATO MOBIL*/
 .header-mobile{
     display: none;
@@ -10,7 +9,7 @@ html,body{
     display: none;
 }
 
-/*CONTENEDOR*/
+/*COTENEDOR*/
 .contenedor{
     background-color: var(--clr-main);
     display: flex;
@@ -20,69 +19,24 @@ html,body{
     height: 100%;
 }
 
-
-/*CONTENIDO*/
-
-/*PRINCIPAL*/
+/*CONTENIDO PRINCIPAL*/
 main{
     padding: 2rem;
-    width: 80%;
+    width: 75%;
     height: 95%;
     border-radius: 20px;
     background-color: var(--clr-white);
 }
-#titulo-principal{
+.titulo-principal{
     color: var(--clr-main);
     padding: 1rem;
 }
-#contenedor-productos{
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(5,1fr);
-    overflow-y:auto;
-    height:90%;
-}
-
-
-.producto{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-}
-.producto-imagen{
-    width: 100%;
-    height: 70%;
-}
-.producto-detalles{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 25%;
-    background-color: var(--clr-main);
-    border-radius: 15px;
-    padding: 0.5rem 1rem;
-}
-.producto-titulo, .producto-precio{
-    color: var(--clr-white);
-}
-.producto-agregar{
-    /*arreglar responsividad*/
-    border: none;
-    border-radius: 10px;
-    background-color: var(--clr-white);
-    color: var(--clr-main);
-    padding: 0.5rem 0px;
-    width: 100%;
-}
-
 
 /*BARRA LATERAL*/
 .aside-visible{
-    padding: 3rem 1rem 1rem 1rem;
+    padding: 3rem 2rem 1rem 2rem;
     height: 95%;
-    width: 15%;
+    width: 20%;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
@@ -104,25 +58,21 @@ nav .menu li{
     margin: 3vh 0px 3vh 0px;
     padding: 0.8vh 0.8rem;
 }
-nav .menu li button, .boton-carrito{
+nav .menu li .boton-menu{
     color: var(--clr-white);
     font-size: 1rem;
     background:none;
     border: none;
 }
-nav .menu li button i, .boton-carrito i{
+nav .menu li .boton-menu i{
     margin-right: 0.5rem;
     /* display: block;
     transform: rotateZ(90deg); */
 }
+
 nav .menu li:hover{
     background-color: var(--clr-white);
 }
-nav .menu li:hover button, nav ul li:hover .boton-carrito{
+nav .menu li:hover .boton-menu{
     color: var(--clr-main);
-}
-/*FOOTER*/
-footer{
-    width: 100%;
-    align-self: flex-end;
 }
