--- a/css/carrito.css
+++ b/css/carrito.css
@@ -19,6 +19,8 @@ html,body{
     height: 100%;
 }
 
+
+
 /*CONTENIDO PRINCIPAL*/
 main{
     padding: 2rem;
@@ -31,6 +33,104 @@ main{
     color: var(--clr-main);
     padding: 1rem;
 }
+
+/*Productos*/
+.contenedor-carrito{
+    height: 90%;
+}
+.carrito-productos{
+    display: flex;
+    flex-flow: column wrap;
+    overflow-y: auto;
+    margin-bottom: 0.5rem;
+}
+.carrito-producto{
+    margin-top: 0.5rem;
+    height: 4rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 4vw;
+    padding: 0.5vw;
+    background-color: var(--clr-gray);
+    border-radius: 10px;
+}
+.carrito-producto-imagen{
+    height: 3rem;
+}
+.carrito-producto div{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+.carrito-producto p, .carrito-producto button{
+    font-size: 0.8rem;
+}
+.carrito-producto button{
+    background: none;
+    border: none;
+    font-weight: bold;
+}
+.carrito-producto-eliminar button{
+    color: var(--clr-red);
+}
+.carrito-producto-comprar button{
+    color: var(--clr-green)
+}
+
+/*Acciones carrito*/
+.carrito-acciones{
+    width: 100%;
+    height: 3rem;
+    margin-top: 0.5rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+#carrito-comprado{
+    display: none;
+    color: var(--clr-main);
+}
+#carrito-vacio{
+    color: var(--clr-main);
+}
+.carrito-acciones-derecha{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+.carrito-acciones-total{
+    display: flex;
+    flex-flow: row wrap;
+    padding: 0.5rem;
+    border-radius: 10px 0px 0px 10px;
+    background-color: var(--clr-gray);
+    color: var(--clr-main);
+    height: 100%;
+    align-items: center;
+}
+.carrito-acciones-total p{
+    margin: 0.2rem;
+}
+.carrito-acciones-vaciar{
+    height: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 0.5rem;
+    background-color: var(--clr-gray);
+    color: var(--clr-main);
+    font-weight: bold;
+}
+.carrito-acciones-comprar{
+    height: 100%;
+    border: none;
+    border-radius: 0px 10px 10px 0px;
+    padding: 0.5rem;
+    background-color: var(--clr-main);
+    color: var(--clr-white);
+    font-weight: bold;
+}
+
 
 /*BARRA LATERAL*/
 .aside-visible{
