--- a/css/main.css
+++ b/css/main.css
@@ -48,18 +48,21 @@ main{
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    background-color: white;
+    border-radius: 15px;
+    height: 18rem;
 }
 .producto-imagen{
-    width: 100%;
-    height: 70%;
+    width: 12rem;
+    height: 12rem;
+    border-radius: 15px;
 }
 .producto-detalles{
     display: flex;
     flex-flow: column wrap;
     justify-content: space-evenly;
     width: 100%;
-    height: 25%;
     background-color: var(--clr-main);
     border-radius: 15px;
     padding: 0.5rem 1rem;
